<resources>
    <string name="app_name">Friend Contact Manager</string>
    <string name="action_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="label_first_name_text_view">First Name</string>
    <string name="label_last_name_text_view">Last Name</string>
    <string name="label_email_text_view">Email</string>
    <string name="button_add">ADD</string>
    <string name="button_back">BACK</string>
    <string name="title_activity_insert">Add New Friend</string>
    <string name="last_name_edit_text_hint">Last Name</string>
    <string name="first_name_edit_text_hint">First Name</string>
    <string name="title_activity_delete">Delete a Friend</string>
    <string name="title_activity_update">Update a Friend</string>
    <string name="email_address_edit_text_hint">Email Address</string>
    <string name="image_button_search_query_content_description">Start contact search by email</string>
</resources>
