<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mike.friendcontactmanager.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/label_query_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="32dp"
        android:text="Search for contact"
        android:textSize="28dp" />

    <View
        android:id="@+id/main_query_colored_divider"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_below="@id/label_query_email_text_view"
        android:background="@color/colorAccent" />

    <EditText
        android:id="@+id/email_query_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/label_query_email_text_view"
        android:layout_alignStart="@+id/label_query_email_text_view"
        android:layout_below="@+id/main_query_colored_divider"
        android:layout_centerHorizontal="true"
        android:hint="@string/label_email_text_view"
        android:inputType="textEmailAddress"
        android:paddingTop="16dp" />

    <ImageButton
        android:id="@+id/query_start_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/email_query_edit_text"
        android:layout_toEndOf="@+id/email_query_edit_text"
        android:contentDescription="@string/image_button_search_query_content_description"

        android:src="@android:drawable/ic_menu_search" />

    <TableLayout
        android:id="@+id/email_search_display_table_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_query_edit_text"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:visibility="gone">


        <TableRow

            android:padding="8dp">

            <TextView
                android:id="@+id/label_first_name_search_result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_first_name_text_view"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/first_name_search_result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textColor="@color/colorAccent"
                android:textSize="32sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow android:padding="8dp">

            <TextView
                android:id="@+id/label_last_name_search_result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_last_name_text_view"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/last_name_search_result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:paddingStart="16dp"
                android:textSize="32sp"
                android:textStyle="bold" />


        </TableRow>


    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</android.widget.RelativeLayout>
